Fixed back-bar stylesheet issue caused by previous change
I took out css for the back button that I didn't mean to take out.

--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -78,11 +78,17 @@ p {
   margin: 12px 0 12px 0;
   background: #b8b8b8;
   /* IE10 */
+  background-image: -ms-linear-gradient(top, white 0%, #b8b8b8 50%);
   /* Mozilla Firefox */
+  background-image: -moz-linear-gradient(top, white 0%, #b8b8b8 50%);
   /* Opera */
+  background-image: -o-linear-gradient(top, white 0%, #b8b8b8 50%);
   /* Webkit (Safari/Chrome 10) */
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, white), color-stop(0.5, #b8b8b8));
   /* Webkit (Chrome 11+) */
+  background-image: -webkit-linear-gradient(top, white 0%, #b8b8b8 50%);
   /* Proposed W3C Markup */
+  background-image: linear-gradient(top, white 0%, #b8b8b8 50%);
   color: #333333; }
   .back-bar .title {
     float: left;
@@ -179,7 +185,7 @@ p {
   width: 48px;
   height: 38px;
   border-right: 1px solid gray;
-  margin: -1px 12px 0 1px;
+  margin: 0px 12px 0 1px;
   padding: 0; }
 
 .title h2, .title h3 {
