--- a/public/stylesheets/sass/site-manager.scss
+++ b/public/stylesheets/sass/site-manager.scss
@@ -11,6 +11,7 @@ ul.fancy-selectable {
     border: 1px solid #b3b3b3;
     margin-bottom: 4px;
     cursor: pointer;
+    overflow: auto;
   }
   li.ui-selecting { background: #FECA40; }
   li.ui-selected { background: #F39814; color: white; }
@@ -39,9 +40,18 @@ h2.active-site {
   }
 }
 
-.sites {
+.sites, .admins {
   img.site-pic {
     vertical-align: middle;
+  }
+  td.site-pic {
+    float: left;
+    padding-right: 10px;  
+    width: 100px;
+    text-align: right; 
+  }
+  div.site-url {
+    font-weight: bold;
   }
 }
 
