--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -4,7 +4,7 @@ html lang="en-US"
     meta http-equiv="Content-Type" content="text/html; charset=utf-8"
     link rel="shortcut icon" type="image/x-icon" href="/yomobi.ico"
     link rel="canonical" href="http://www.yomobi.com"
-    
+
     = render 'shared/meta-description'
     = render 'shared/meta-keywords'
 
@@ -16,14 +16,14 @@ html lang="en-US"
     = csrf_meta_tag
   body
     = topline_notice
-    
+
     #global-container
 
       #header class=(user_signed_in? ? 'signed-in' : 'signed-out')
         .content
           a#logo href=root_path
             img src="/images/yomobi-logo-#{user_signed_in? ? 20 : 32}.png"
-          
+
           - if current_user.nil? && @hide_header_signin_form != true
             = render :partial => 'shared/header-signin-form'
           = render :partial => 'shared/nav'
@@ -43,7 +43,8 @@ html lang="en-US"
           .clearfix
         .clearfix
       = render 'shared/footer'
-    
+
+    = render 'layouts/js-base'
     = yield :js
     = javascript_include_tag 'notice'
 
