--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -28,6 +28,19 @@ html lang="en-US"
             = render :partial => 'shared/header-signin-form'
           = render :partial => 'shared/nav'
           .clearfix
+      - if @landing_bar
+        .landing-bar
+          table.content
+            tbody
+              tr
+                td
+                  a href=about_path About Us
+                td
+                  a href=why_mobile_path Why Mobile
+                td
+                  a href=opportunity_path Business Opportunities
+                td
+                  a href=help_url Help
       - unless user_signed_in? || @hide_signup_bar
         .signup-bar
           .content
