--- a/public/stylesheets/sass/constants.scss
+++ b/public/stylesheets/sass/constants.scss
@@ -15,6 +15,7 @@ $header-font-color: white;
 $light-border: #b3b3b3;
 
 $page-width: 1010px;
+$content-padding: 40px;
 $sidebar-width: 210px;
 $emulator-width: 380px;
 
@@ -31,6 +32,7 @@ $font-size-input: 12px;
 $font-size-input-button: 14px;
 $font-size-label: 13px;
 $font-size-label-current-link: 14px;
+$font-size-landing-bar: 14px;
 $font-size-p: 110%;
 $font-size-select: 12px;
 $font-size-signup-bar: 14px;
