--- a/app/views/home/about.html
+++ b/app/views/home/about.html
@@ -1,4 +1,4 @@
-<div id="about">
+<div id="about" class="yomobi-info-page">
 
   <h2>YoMobi's mission is to make it easy for everyone to join the mobile revolution.</h2>
 
