--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -44,6 +44,7 @@ html lang="en-US"
               li
                 div.menu-item
                   a target="ym-help" href=help_url Help 
+            .clearfix
       - unless user_signed_in? || @hide_signup_bar
         .signup-bar
           .content
