--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -114,8 +114,9 @@ label {
   border-bottom: 1px solid #D8DFEA;
   padding: 5px 40px 5px 40px; }
   .signup-bar .content, .landing-bar .content {
-    width: 1010px;
-    margin: 0 auto; }
+    width: 970px;
+    margin: 0 auto;
+    padding-left: 40px; }
   .signup-bar a, .landing-bar a {
     color: white !important;
     text-decoration: none; }
@@ -140,6 +141,8 @@ label {
     .landing-bar .menu-bar li {
       position: relative;
       float: left; }
+    .landing-bar .menu-bar li:first-child {
+      margin-left: -10px; }
     .landing-bar .menu-bar .menu-item {
       font-size: 14px;
       font-weight: bold;
@@ -311,7 +314,7 @@ label {
     font-size: 1.5em;
     margin-top: 20px; }
 
-#privacy, #terms, #about {
+.yomobi-info-page {
   margin: 40px; }
 
 #easy {
