Use a different icon and msg for manually hidden widgets. Addresses #167

--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -120,6 +120,9 @@ div.wysiwyg ul.toolbar {
   left: 43px;
   background: url(/images/ui/invalid-for-showing.png) no-repeat; }
 
+.home-icon.invalid.deactivated .invalid-icon {
+  background-image: url(/images/ui/deactivated.png); }
+
 #builder-container {
   background: #edeff4;
   border-top: 1px solid #b3b3b3; }
