--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -136,6 +136,10 @@ div.wysiwyg ul.toolbar {
     left: 43px;
     background: url(/images/ui/invalid-for-showing.png) no-repeat; } }
 
+.home-icon.invalid.deactivated .invalid-icon {
+  background-image: url(/images/ui/deactivated.png);
+}
+
 #builder-container {
   background: $light-bg-color;
   border-top: 1px solid #b3b3b3; }
