Hid "Why Mobile" and "Business Opportunities" links for now
We're not ready for them.

--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -37,10 +37,7 @@ html lang="en-US"
                   a href=about_path About Us
               li
                 div.menu-item
-                  a href=why_mobile_path Why Mobile
-              li
-                div.menu-item
-                  a href=opportunity_path Business Opportunities
+                  a href="mailto:feedback@yomobi.com" Feedback
               li
                 div.menu-item
                   a target="ym-help" href=help_url Help 
