--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -534,6 +534,11 @@ div.wysiwyg ul.toolbar {
 #builder .edit-area.category .button.delete, #builder .edit-area.page_tree .button.delete {
   background-image: url(/images/ui/icon-delete.png);
   background-position: center; }
+#builder .edit-area.category .button.import, #builder .edit-area.page_tree .button.import {
+  margin: 0;
+  padding: 6px 6px 0 16px;
+  background-image: url(/images/ui/icon-edit.png);
+  background-position: center; }
 #builder .edit-area.category ul.fancy-selectable, #builder .edit-area.page_tree ul.fancy-selectable {
   height: 290px;
   overflow: auto; }
@@ -668,6 +673,10 @@ div.wysiwyg ul.toolbar {
   vertical-align: middle; }
 #dialog-confirm.jeditor-image input[name=size] {
   width: auto; }
+
+#dialog-confirm.import textarea[name=output] {
+  font-family: Consolas,Monaco,'Courier New',monospace;
+  outline: none; }
 
 #builder input[name="back"] {
   margin-right: 16px;
