Moved import button to top level. Addresses #134

--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -503,6 +503,13 @@ script.category-edit-area.menu-edit-area.services-edit-area.products-edit-area.p
     br
     br
 
+    input type="button" name="import" value="Import XML" &nbsp;
+    a href="http://help.yomobi.com/Advanced/ImportingCollections" target="_blank"
+      img.help-bubble src="/images/ui/help-bubble.png" title=t('builder.settings.help.import')
+
+    br
+    br
+
     input type="checkbox" name="hideWidget"
     label for="hide" Deactivate
     img.help-bubble src="/images/ui/help-bubble.png" title=t('widgets.helpText.category.hide')
@@ -543,7 +550,6 @@ script.category-edit-area.menu-edit-area.services-edit-area.products-edit-area.p
       .button.edit title="Edit" &nbsp;
       .button.rename title="Rename" &nbsp;
       .button.delete title="Delete" &nbsp;
-      .button.import title="Import" &nbsp;
       | <% } %>
 
       .clearfix
@@ -573,8 +579,8 @@ script.category-edit-area.menu-edit-area.services-edit-area.products-edit-area.p
 script.import-collection-dialog(type="text/template")
   #dialog-confirm.import title="Import"
     | Paste your XML here:
-    a href="http://help.yomobi.com/Advanced/ImportingCollections"
-      img.help-bubble src="/images/ui/help-bubble.png" title=t('builder.settings.help.import')
+    a href="http://help.yomobi.com/Advanced/ImportingCollections" target="_blank"
+      img.help-bubble src="/images/ui/help-bubble.png" title=t('builder.settings.help.import_dialog')
     textarea name="data"
     label Output:
     textarea name="output" readonly="readonly"
