--- a/app/views/mobile/_social-share.html.erb
+++ b/app/views/mobile/_social-share.html.erb
@@ -13,9 +13,9 @@ title = u "#{@company.name}'s Mobile Website - YoMobi"
 
   <li><a rel="nofollow"  target="_blank" href="http://www.stumbleupon.com/submit?url=<%= curl %>&amp;title=<%= title %>" title="StumbleUpon"><img src="/images/share/stumbleupon.png" title="StumbleUpon" alt="StumbleUpon" /></a></li>
 
-  <li><a rel="nofollow"  target="_blank" href="http://www.google.com/bookmarks/mark?op=edit&amp;bkmk=<%= curl %>&amp;title=<%= title %>&amp;annotation=This%20site%20is%20interesting." title="Google"><img src="/images/share/google.png" title="Google Bookmarks" alt="Google Bookmarks" /></a></li>
+  <li><a rel="nofollow"  target="_blank" href="https://plus.google.com/share?url=<%= curl %>&amp;title=<%= title %>" title="Google+"><img src="/images/share/google.png" title="Google+ Share" alt="Google+ Share" /></a></li>
 
-  <li><a rel="nofollow"  target="_blank" href="mailto:?subject=<%=title %>&amp;body=<%= curl %>" title="email"><img src="/images/share/email.png" title="email" alt="email" /></a></li>
+  <li><a rel="nofollow"  target="_blank" href="mailto:?subject=<%=title %>&amp;body=<%= curl %>" title="email"><img src="/images/share/email.png" title="Email" alt="Email" /></a></li>
 </ul>
 
 <div class="clearfix"></div>
