Implement mobile rss widget. Addresses #192

--- a/app/views/layouts/mobile.slim
+++ b/app/views/layouts/mobile.slim
@@ -62,6 +62,9 @@ html lang="en-US" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com
       });
 
     = javascript_include_tag 'support/bezen.domwrite.js'
+    = javascript_include_tag "https://www.google.com/jsapi"
+    javascript:
+      google.load("feeds", "1");
 
     - if Rails.env.production?
       = javascript_include_tag 'google-analytics'
