--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -237,7 +237,7 @@
     pre.desc {{ _maybe.description }}
 
   script.category-cat.category-item(type="text/template")
-    tr.category.item class="{{ cat._type }}" data-id="{{ cat._id }}"
+    tr.category.item data-id="{{ cat._id }}"
       | <% if (cat.wphotoUrl) { %>
       td.img-col
         img src="{{ cat.wphotoUrl }}"
@@ -268,14 +268,17 @@
     .wphoto-large-separator
     | <% } %>
 
-    | <% if (nodeType === 'item') {
+
+    | <% if (nodeType === 'loading') { %>
+    h2 Loading...
+    | <% } else if (nodeType === 'item') {
     |     print( itemTemplate({ item:node }) );
     | } else { %>
 
     table.node-list
       tbody
         | <% for (var i=0; i<stuff.length;i++) {
-              if (stuff[i].type === "cat" || stuff[i].type === "page") {
+              if (stuff[i].type === "cat" || stuff[i].type === "page" || stuff[i].type === "title") {
                 print( catTemplate({ cat:stuff[i], cycle:util.cycle('c0','c1') }) );
               } else {
                 print( itemWrapTemplate({
