Added rss widget to builder. Addresses #192

--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -414,6 +414,11 @@ script.booking-request-edit-area(type="text/template")
   label Your Email Address*:
   input(name="email" type="text" value="{{ _maybe.email }}")
 
+script.rss-feed-edit-area(type="text/template")
+  label
+    | RSS Feed URL*:
+  input(name="url" type="text" value="{{ _maybe.url }}")
+
 script.keep-me-informed-edit-area(type="text/template")
   label Your Email Address*:
   input name="email" type="text" value="{{ _maybe.email }}"
