--- a/app/views/shared/_category-templates.slim
+++ b/app/views/shared/_category-templates.slim
@@ -59,8 +59,8 @@ script.locations-item type="text/template"
   pre.desc.long {{ item.desc }}
 
 script.rss-item type="text/template"
-  .name.long {{ item.title }}
-  .desc.long {{ item.content }}
+  h3.name.long {{ item.title }}
+  .post-content.long {{ item.content }}
   a href="{{ item.link }}" More...
 
 / this template is used to check if a photo is being displayed
