Added rss post count config to builder. Addresses #192

--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -418,6 +418,12 @@ script.rss-feed-edit-area(type="text/template")
   label
     | RSS Feed URL*:
   input(name="url" type="text" value="{{ _maybe.url }}")
+  br
+  label
+    | Max number of entries:
+  select name="postCount" type="text" value="{{ _maybe.postCount }}"
+    - 25.times do |i|
+      option value=i+1 = i+1
 
 script.keep-me-informed-edit-area(type="text/template")
   label Your Email Address*:
