Fixed CSS for Category editor toolbar

--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -503,6 +503,7 @@ div.wysiwyg ul.toolbar {
   height: 22px;
   padding: 6px 6px 0 22px;
   margin: 0 4px 0 0;
+  border: 1px outset transparent;
   background: url(/images/ui/plus.png) 3px 5px no-repeat;
   float: left;
   cursor: pointer; }
@@ -510,8 +511,7 @@ div.wysiwyg ul.toolbar {
     padding-left: 24px;
     background-position: 50% 50%; }
 #builder .edit-area.category .controls .button:hover, #builder .edit-area.page_tree .controls .button:hover {
-  border: 1px outset #e0e0e0;
-  margin: -1px 3px -4px -1px; }
+  border: 1px outset #e0e0e0; }
 #builder .edit-area.category .button.back, #builder .edit-area.page_tree .button.back {
   background-image: url(/images/ui/back-btn.png); }
 #builder .edit-area.category .button-separator, #builder .edit-area.page_tree .button-separator {
