Added rss to generic category widget. Addresses #192

--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -548,6 +548,9 @@ script.category-edit-area.menu-edit-area.services-edit-area.products-edit-area.p
       .button-separator
       .button.add-cat Add {{ catLabel }}
       .button.add-item Add {{ itemLabel }}
+      | <% if (wtype === 'page_tree') { %>
+      .button.add-rss-feed = ""
+      | <% } %>
 
       | <% if (isThereStuff == true) { %>
       .button-separator
