Various category rss builder bug fixes. Closes #198

--- a/app/views/builder/_cat-dialog-templates.slim
+++ b/app/views/builder/_cat-dialog-templates.slim
@@ -137,7 +137,7 @@ script.locations-item-dialog-content(type="text/template")
   br
 
 script.rss-feed-item-dialog-content(type="text/template")
-  p Location Information:
+  p RSS Feed Information:
   label Feed Title*
   br
   input.item-input type="text" value="{{ _maybe.name }}" name="name"
