Added icons for RSS feed and updated CSS

--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -548,7 +548,7 @@ script.category-edit-area.menu-edit-area.services-edit-area.products-edit-area.p
       .button.add-cat Add {{ catLabel }}
       .button.add-item Add {{ itemLabel }}
       | <% if (wtype === 'page_tree') { %>
-      .button.add-rss-feed = ""
+      .button.add-rss-feed title="Add RSS Feed" = ""
       | <% } %>
 
       | <% if (isThereStuff == true) { %>
