--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -61,7 +61,11 @@
   script.phone-page(type="text/template")
     h2 Call:
     h2
+      | <% if (g.isMobile) { %>
       a href="tel:{{ _maybe.phone }}" {{ _maybe.phone }}
+      | <% } else { %>
+      | {{ _maybe.phone }}
+      | <% } %>
 
   script.leave_msg-page(type="text/template")
     .input-wrap
